kubernetes/apps/flux-system/flux-operator/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-operator-network-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: flux-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: flux-system
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: flux-system
